--- a/src/App.css
+++ b/src/App.css
@@ -45,8 +45,10 @@ body{
 }
 .list p input{
   background-color: transparent;
+  width: 350px;
   border: 0;
   color: wheat;
+  padding-top: 4px;
   font-size: 18px;
 }
 
